crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/036.cypher
MATCH (n) // inline comment
RETURN n; MATCH (m) RETURN m
